--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "shortid": "^2.2.16",
     "streamifier": "^0.1.1",
     "uuid": "^9.0.0",
+    "xls-to-json": "^2.1.1",
     "xlsx": "^0.18.5"
   }
 }
