--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nanoid": "^4.0.2",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
+    "sharp": "^0.32.6",
     "shortid": "^2.2.16",
     "streamifier": "^0.1.1",
     "uuid": "^9.0.0",
